# cookie-clicker-gc-detector

./: README.md  golden_cookie_detector.py  main.py  pyproject.toml
